Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.2
-
Fix Version/s: 6.2.0 RC
-
Component/s: Quick: Mouse Touch and Tablet input, Wayland Compositor
-
Labels:None
-
Commits:d9ec6710c44170272fb9a9fa5f36b6a7f3c0e3e4 (qt/tqtc-qtdeclarative/6.2) 3a4b04c7cac426c5dd0e4ba53129863d16e89c89 (qt/tqtc-qtdeclarative/dev)
Description
With the minimal-qml example, run any client, and close it using the "X" button on the client-side decorations. The compositor crashes with the attaced stack trace.
Attachments
For Gerrit Dashboard: QTBUG-96126 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
367821,2 | Don't crash if item is deleted from mouse click | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
367864,2 | Don't crash if item is deleted from mouse click | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |