Don't crash if item is deleted from mouse click

This caused a crash in QWaylandCompositor when closing the final window
in an action triggered by a mouse click.

Fixes: QTBUG-96126
Pick-to: 6.2
Change-Id: I48ead0e8e2eb2e24c168c6b3bb9ba39b4db42893
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>